Implemented basic IPackageController hook (after_show). Addressed issue #39 with edit preprocessor.

--- a/ckanext/publicamundi/templates/package/read.html
+++ b/ckanext/publicamundi/templates/package/read.html
@@ -6,28 +6,15 @@
     
   {{ super() }}
   
-  {#
+  {% set dt_spec = h.dataset_types().get(pkg.dataset_type) %}
   <div>
-    <dt>Dataset Type:</dt><dd>{{ pkg.dataset_type | default('<none>') }}</dd>
+    <dt>Dataset Type:</dt>
+    <dd>{{ dt_spec.get('title', '<none>') }}: {{ dt_spec.get('description', 'n/a') }}</dd>
   </div>
-  #}
-
-  {#
-  <div><dt>Baz:</dt><dd>{{ pkg.baz | default('<none>') }}</dd></div>
-  #}
 
   {#
   <div><dt>Baz (view):</dt><dd>{{ pkg.baz_view | default('<none>') }}</dd></div>
   #}  
-
-  {# Add our custom "foo" field to the dataset read page. #}
-  {#
-  {% if pkg.get('foo') %}
-    <section id="dataset-foo" class="resources module-content">
-    <p><strong>{{ _('Foo') }}</strong>: {{ pkg.foo.0 }}</p>
-    </section>
-  {% endif %}
-  #}
 
 {% endblock %}
 
