--- a/ckanext/publicamundi/templates/package/snippets/edit_inspire_metadata_fields.html
+++ b/ckanext/publicamundi/templates/package/snippets/edit_inspire_metadata_fields.html
@@ -1,11 +1,13 @@
 {% import 'macros/form.html' as form %}
 
+{% set inspire = data.get('inspire', {}) %}
+
 {{
      form.input('inspire.datestamp', 
         label=_('Inspire/Date'), 
         id='field-inspire.datestamp', 
         placeholder=_('YYYY-MM-DD'), 
-        value=data.get('inspire.datestamp'), 
+        value=inspire.datestamp, 
         error=errors.get('inspire.datestamp'), 
         classes=['control-small'],        
         attrs = { 'data-module': 'datepicker', 'data-module-format': 'yyyy-mm-dd' }) 
@@ -19,7 +21,7 @@
             {'text': 'Greek', 'value': 'el'}, 
             {'text': 'Romanian', 'value': 'ro'}, 
         ], 
-        selected = data.get('inspire.languagecode'), 
+        selected = inspire.languagecode, 
         attrs = { 'data-module': 'no-autocomplete' }) 
 }}
 
@@ -28,7 +30,7 @@
     form.input('inspire.identifier.' ~ i, 
         label=_('Inspire/Id #' ~ (i+1)), 
         id='field-inspire.identifier.' ~ i, 
-        value=data.get('inspire.identifier.' ~ i), 
+        value=inspire.identifier[i], 
         error=errors.get('inspire.identifier,' ~ i), 
         classes=['control-small'])
 }}
