Fixed str/unicode serialization problems. Updated tests

--- a/ckanext/publicamundi/templates/package/snippets/package_basic_fields.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_basic_fields.html
@@ -4,18 +4,8 @@
 {% set is_draft = data.get('state', 'draft') == 'draft' %}
 
 {% block package_basic_fields_autofill %}
-<span class="btn btn-small btn-warning" id="autofill" onclick="javascript:autofill()" >Autofill</span>
-<script type="text/javascript">
-    var autofill = function() {
-        $('#field-title').val('Hello Baz 3')
-        $('#field-name').val('hello-baz-3')
-        $('#field-dataset_type').select2('val', 'foo')
-        $('#field-notes').val('Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.')
-        $('#field-tags').select2('val', ['hello-world', 'test'])
-        $('#field-license').select2('val', 'gfdl')
-        $('#field-version').val('2.5')
-    }
-</script>
+<span class="btn btn-warning hide" data-module="form-autofiller" data-module-formid="package-form">Auto</span>
+{% resource 'ckanext-publicamundi/form-autofiller'  %}
 {% endblock %} {# package_basic_fields_autofill #}
 
 {% block package_basic_fields_title %}
