--- a/ckanext/publicamundi/templates/package/snippets/package_metadata_form.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_metadata_form.html
@@ -6,6 +6,11 @@
 <form id="package-form" class="dataset-form dataset-resource-form form-horizontal" method="post" data-module="basic-form">
   {{ h.snippet('package/snippets/stages.html', stages=['complete', 'complete', 'active'], pkg_name=pkg_name) }}
   {{ form.errors(error_summary) }}
+  
+  {% block package_fields_autofill %}
+  <span class="btn btn-warning hide" data-module="form-autofiller" data-module-formid="package-form">Auto</span>
+  {% resource 'ckanext-publicamundi/form-autofiller'  %}
+  {% endblock %} {# package_basic_autofill #}
 
   {% snippet 'package/snippets/package_metadata_fields.html', data=data, errors=errors, groups_available=groups_available %}
 
@@ -16,3 +21,7 @@
   </div>
 
 </form>
+
+{% resource 'ckanext-publicamundi/styles' %}
+{% resource 'ckanext-publicamundi/scripts' %}
+
