Minor changes for object/field widgets (renamed template vars, removed demo methods)

--- a/ckanext/publicamundi/templates/package/snippets/fields/read-object.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/read-object.html
@@ -4,6 +4,6 @@
     <h3 class="title">{{ title }}</h3>
     {% if description %}<div class="description">{{ description }}</div>{% endif -%}
     <div>
-        {{ obj.markup }}
+        {{ content.markup }}
     </div>
 </div>
