--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-object.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-object.html
@@ -3,6 +3,6 @@
     {% if title %}<h3 class="title">{{ title }}</h3>{% endif -%}
     {% if description %}<div class="description">{{ description }}</div>{% endif -%}
     <div>
-        {{ obj.markup }}
+        {{ content.markup }}
     </div>
 </div>
