--- a/ckanext/publicamundi/public/css/widgets.css
+++ b/ckanext/publicamundi/public/css/widgets.css
@@ -1,3 +1,7 @@
 
 .widget h3 { font-size: 1.2em; }
 .widget li > .widget h3 { font-size: 1em; }
+
+.widget.object-read-widget .table.metadata-table {
+
+}
