--- a/ckanext/publicamundi/templates/package/snippets/additional_info.html
+++ b/ckanext/publicamundi/templates/package/snippets/additional_info.html
@@ -1,12 +1,18 @@
 <section class="additional-info">
   <h3>{{ _('Additional Info') }}</h3>
-  <table class="table table-striped table-bordered table-condensed">
+  <table class="table table-bordered table-condensed">
+    <colgroup>
+        <col width="20%"></col>
+        <col width="80%"></col>
+    </colgroup>
+    {#  
     <thead>
       <tr>
         <th scope="col">{{ _('Field') }}</th>
         <th scope="col">{{ _('Value') }}</th>
       </tr>
     </thead>
+    #}
     <tbody>
       {% block package_additional_info %}
         {% if pkg_dict.url %}
@@ -67,4 +73,14 @@
       {% endblock %}
     </tbody>
   </table>
+
+  {% block package_publicamundi_additional_info scoped %} 
+    {% set dt = pkg_dict.dataset_type %}
+    {% set obj = pkg_dict.get(dt) %}
+    {% if obj %}
+    {% set title = _('%s Metadata')|format(h.dataset_types().get(dt).get('title')) %}
+    {{ h.markup_for_object('read:table', obj, errors={}, name_prefix='', data=dict(title=title)) }}
+    {% endif %}
+  {% endblock %}
+
 </section>
