--- a/ckanext/publicamundi/templates/package/snippets/additional_info.html
+++ b/ckanext/publicamundi/templates/package/snippets/additional_info.html
@@ -1,9 +1,9 @@
 <section class="additional-info">
-  <h3>{{ _('Additional Info') }}</h3>
-  <table class="table table-bordered table-condensed">
+  <h3>{{ _('Basic Metadata') }}</h3>
+  <table class="table table-bordered">
     <colgroup>
-        <col width="20%"></col>
-        <col width="80%"></col>
+        <col width="22.1%"></col>
+        <col width="77.9%"></col>
     </colgroup>
     {#  
     <thead>
