--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-choice-select2.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-choice-select2.html
@@ -8,7 +8,7 @@
     </label>
     <div class="controls">
         <select name="{{ qname }}" id="{{ 'input-' ~ qname }}" {{ attrs | xmlattr }} 
-            data-module="input-select2" 
+            data-module="no-input-select2" 
             data-module-width="element"
             data-module-minimumresultsforsearch="12"
             data-module-placeholder="{{ placeholder }}"
