--- a/ckanext/publicamundi/templates/package/snippets/additional_info.html
+++ b/ckanext/publicamundi/templates/package/snippets/additional_info.html
@@ -1,18 +1,11 @@
 <section class="additional-info">
+
   <h3>{{ _('Basic Metadata') }}</h3>
   <table class="table table-bordered">
     <colgroup>
         <col width="22.1%"></col>
         <col width="77.9%"></col>
     </colgroup>
-    {#  
-    <thead>
-      <tr>
-        <th scope="col">{{ _('Field') }}</th>
-        <th scope="col">{{ _('Value') }}</th>
-      </tr>
-    </thead>
-    #}
     <tbody>
       {% block package_additional_info %}
         {% if pkg_dict.url %}
@@ -74,13 +67,17 @@
     </tbody>
   </table>
 
-  {% block package_publicamundi_additional_info scoped %} 
-    {% set dt = pkg_dict.dataset_type %}
-    {% set obj = pkg_dict.get(dt) %}
-    {% if obj %}
-    {% set title = _('%s Metadata')|format(h.dataset_types().get(dt).get('title')) %}
-    {{ h.markup_for_object('read:table', obj, errors={}, name_prefix='', data=dict(title=title)) }}
-    {% endif %}
-  {% endblock %}
+  {%- set dt = pkg_dict.dataset_type -%}
+  {%- set obj = pkg_dict.get(dt) -%}
+  
+  {%- if obj -%}
+  <h3>{{ '%s Metadata' | format(h.dataset_types().get(dt).get('title')) }}</h3> 
+  {{ 
+     h.markup_for('read:table', obj, 
+        errors={}, 
+        name_prefix='', 
+        data={ 'max_depth': 2 },) 
+  }}
+  {%- endif -%} {# if obj #}
 
 </section>
