--- a/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-foo-datasetform.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-foo-datasetform.html
@@ -4,36 +4,29 @@
 {% set groups = [
         { 
             'name': 'basic',
-            'heading': _('Basic'),
-            'fields': ['title', 'url', 'notes', 'baz']
-        },
-        { 
-            'name': 'categorization',
-            'heading': _('Categorization'),
-            'fields': ['tags', 'thematic_category'],
+            'heading': _('Basic Foo'),
+            'fields': ['title', 'url', 'notes', 'baz', 'tags', 'thematic_category']
         },
         { 
             'name': 'contact',
-            'heading': _('Contact'),
+            'heading': _('Contact Info'),
             'fields': ['contact_info', 'contacts'],
         },
         { 
             'name': 'details',
             'heading': _('Details'),
-            'fields': ['temporal_extent', 'reviewed', 'created', 'published', 
+            'fields': [
+                'temporal_extent', 'reviewed', 'created', 'published', 
                 'wakeup_time', 'rating', 'grade'],
         },
    ]
 %}
 
 <div class="{{ " " ~ classes | join(' ') }}">
-    <h3>{{ title }}</h3>
-    
-    {{ markup_helpers.error_messages(errors[errors.global_key]) }} 
-    
+    {% if title %}<h3>{{ title }}</h3>{% endif %}
     {% call(group_desc) accordion.accordion('foo-fields', groups) %}
-        {% for k in group_desc.fields -%}
-        {{ fields[k].markup }}
+        {% for fname in group_desc.fields -%}
+        {{ fields[fname].markup }}
         {% endfor -%}
     {% endcall %}
 </div>
