--- a/ckanext/publicamundi/templates/package/snippets/package_metadata_fields.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_metadata_fields.html
@@ -1,8 +1,8 @@
 {% import 'macros/form.html' as form %}
 
-{% block package_metadata_fields %}
+{% block package_metadata_fields scoped %}
 
-{% set is_draft = data.get('state', 'draft') == 'draft' %}
+{%- set is_draft = data.get('state', 'draft') == 'draft' -%}
 {% set dataset_type = data.get('dataset_type') %}
 
 {# This is a workaround for bug #36 #}
@@ -19,7 +19,6 @@
 {% endif %} {# dataset_type == 'inspire' #}
 
 {% block package_metadata_fields_url %}
-
 {{ 
     form.input('url', 
         label=_('Source'), 
@@ -29,11 +28,9 @@
         error=errors.url, 
         classes=['control-medium']) 
 }}
-
 {% endblock %} {# package_metadata_fields_url #}
 
 {% block package_metadata_fields_version %}
-    
 {{ 
     form.input('version', 
         label=_('Version'), 
@@ -43,11 +40,9 @@
         error=errors.version, 
         classes=['control-medium']) 
 }}
-
 {% endblock %} {# package_metadata_fields_version #}
 
 {% block package_metadata_author %}
-
 {{ 
     form.input('author', 
         label=_('Author'), 
@@ -57,7 +52,6 @@
         error=errors.author, 
         classes=['control-medium'])         
 }}
-
 {{ 
     form.input('author_email', 
         label=_('Author Email'), 
@@ -67,11 +61,9 @@
         error=errors.author_email, 
         classes=['control-medium']) 
 }} 
-
 {% endblock %} {# package_metadata_author #}
 
 {% block package_metadata_fields_maintainer %}
-
 {{ 
     form.input('maintainer', 
         label=_('Maintainer'), 
@@ -81,7 +73,6 @@
         error=errors.maintainer, 
         classes=['control-medium']) 
 }}
-
 {{ 
     form.input('maintainer_email', 
         label=_('Maintainer Email'), 
@@ -91,15 +82,12 @@
         error=errors.maintainer_email, 
         classes=['control-medium']) 
 }}
-
 {% endblock %} {# package_metadata_fields_maintainer #}
 
 {% block package_metadata_fields_custom %}
-
 {# Note: 
-  Remove free extras from the package form. If you're using convert_{to/from}_extras() as we are 
-  with our 'music_description' field below then you need to remove free extras from the form, or editing 
-  your custom field won't work!!   
+  Remove free extras from the package form. We are using convert_{to/from}_extras(),
+  so we need to remove free extras from the form (or editing breaks!)   
 #}
 {% block custom_fields %}
 {# {% snippet 'snippets/custom_form_fields.html', extras=data.extras, errors=errors, limit=3 %} #}
@@ -107,6 +95,6 @@
 {% endblock %} {# package_metadata_fields_custom #}
 
 {% block dataset_fields %}
-{% endblock %}
+{% endblock %} {# dataset_fields #}
 
 {% endblock %} {# package_metadata_fields #}
