Minor changes (cherry-pick from eab71f9)

--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -24,11 +24,11 @@ input[type="tel"] {
 }
 
 .form-horizontal .control-label {
-    width: 127px;
+    width: 140px;
 }
 
 .form-horizontal .controls {
-    margin-left: 137px;
+    margin-left: 146px;
 }
 
 .error-block {
@@ -47,8 +47,16 @@ input[type="tel"] {
     font-size: 12px;
 }
 
+.select2-container .select2-choice,
 .select2-container-multi .select2-choices {
     border-radius: 1px;
+    line-height:28px;
+    height:28px;
+}
+
+.select2-container-multi .select2-choices {
+    background: none;
+    box-shadow: 0px;
 }
 
 .select2-container-multi .select2-choices .select2-search-choice {
@@ -67,8 +75,25 @@ input[type="tel"] {
     cursor: pointer;
 }
 
-
 .bootstrap-datetimepicker-widget td, 
 .bootstrap-datetimepicker-widget th {
     border-radius: 2px;
+}
+
+.form-horizontal .info-inline {
+    width: 235px;
+}
+
+.form-horizontal .control-group .controls > div.display {
+    padding-top: 5px;
+}
+
+.table {
+    margin-bottom: 10px;
+    margin-top:10px;
+}
+
+.control-required {
+    font-size: 14px;
+    font-family: menu;
 }
