--- a/ckanext/publicamundi/templates/package/snippets/package_metadata_fields.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_metadata_fields.html
@@ -2,34 +2,6 @@
 
 {% block package_metadata_fields %}
 
-{%- set is_draft = data.get('state', 'draft') == 'draft' -%}
-{% set dataset_type = data.get('dataset_type') %}
-
-{# This is a workaround for bug #36 #}
-{% if is_draft %}
-{{ form.hidden('dataset_type', dataset_type) }} 
-{% endif %}
-
-{% if dataset_type == 'foo' %}
-{% set foo = data.get('foo') or h.make_object('foo') %}
-{% if errors %}
-{% do 
-    foo.from_dict(data, is_flat=true, opts={ 
-        'update': 'deep', 
-        'unserialize-keys': true, 
-        'key-prefix': 'foo', 
-        'unserialize-values': 'default', 
-    }) 
-%}
-{% endif %} {# errors #}
-{% snippet 'package/snippets/edit_foo_metadata_fields.html', data=data, foo=foo, errors=errors %}
-{% endif %} {# dataset_type == 'foo' #}
-
-{% if dataset_type == 'inspire' %}
-{% set inspire = data.get('inspire', {}) %}
-{% snippet 'package/snippets/edit_inspire_metadata_fields.html', data=data, inspire=inspire, errors=errors %}
-{% endif %} {# dataset_type == 'inspire' #}
-
 {% block package_metadata_fields_url %}
 {{ 
     form.input('url', 
@@ -107,6 +79,36 @@
 {% endblock %} {# package_metadata_fields_custom #}
 
 {% block dataset_fields %}
+
+{%- set is_draft = data.get('state', 'draft') == 'draft' -%}
+
+{% set dt = data.get('dataset_type') -%}
+{% set dt_prefix = dt -%}
+{% set obj = data.get(dt_prefix) or h.make_object(dt) -%}
+
+{# A workaround for bug #36 #}
+{% if is_draft -%}
+{{ form.hidden('dataset_type', dt) }} 
+{% endif -%}
+
+{% if errors -%}
+{% do 
+    obj.from_dict(data, is_flat=true, opts={ 
+        'update': 'deep', 
+        'unserialize-keys': true, 
+        'key-prefix': dt_prefix, 
+        'unserialize-values': 'default', 
+    }) 
+%}
+{% endif -%} {# if errors #}
+
+{{ 
+    h.markup_for('edit:datasetform', obj, 
+        errors=errors, 
+        name_prefix=dt_prefix, 
+        data={}) 
+}}
+
 {% endblock %} {# dataset_fields #}
 
 {% endblock %} {# package_metadata_fields #}
